--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "connected-react-router": "^6.6.1",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^2.2.0",
-    "jwt-js-decode": "^1.4.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -27,6 +26,7 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-form": "^8.2.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
