--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
     "@ant-design/icons-svg": "^4.0.0",
+    "@aws-amplify/api": "^3.1.21",
+    "@aws-amplify/pubsub": "^3.0.22",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
